crates/eml_cli/tests/snapshots/integration__ui__run@basics__comma_after_a_lambda_body.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/basics/comma_after_a_lambda_body.em
---
--- stdout ---
22
--- stderr ---
