crates/eml_cli/tests/snapshots/integration__ui__run@basics__comma_inside_a_block.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/basics/comma_inside_a_block.em
---
--- stdout ---
ok
--- stderr ---
