crates/eml_cli/tests/snapshots/integration__ui__run@basics__fibonacci.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/basics/fibonacci.em
---
--- stdout ---
0
1
1
2
3
5
8
13
21
34
--- stderr ---
