crates/eml_cli/tests/snapshots/integration__ui__run@basics__hello.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/basics/hello.em
---
--- stdout ---
Hello, world!
--- stderr ---
