crates/eml_cli/tests/snapshots/integration__ui__run@basics__let_in.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/basics/let_in.em
---
--- stdout ---
42
--- stderr ---
