crates/eml_cli/tests/snapshots/integration__ui__run@basics__short_circuit_conditions.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/basics/short_circuit_conditions.em
---
--- stdout ---
a
and: no
c
or: yes
e
f
both: yes
k
l
three: no
g
h
1
kept
--- stderr ---
